# KNN

./: CMakeLists.txt  README.md  global_data.cpp  global_data.h  makefile
IO/: DefaultIO.h  SocketIO.cpp  SocketIO.h  StandardIO.cpp  StandardIO.h
client/: client.cpp
command/: CLI.cpp  CLI.h  Command.cpp  Command.h  algorithm_settings.cpp  algorithm_settings.h  classify_data.cpp  classify_data.h  display_result.cpp  display_result.h  download_results.cpp  download_results.h  exit_command.cpp  exit_command.h  global_data.cpp  global_data.h  upload_unclassified.cpp  upload_unclassified.h
server/: CanberraDistance.cpp  CanberraDistance.h  ChebyshevDistance.cpp  ChebyshevDistance.h  ClassifiedArray.cpp  ClassifiedArray.h  Distance.h  EuclideanDistance.cpp  EuclideanDistance.h  ManhattanDistance.cpp  ManhattanDistance.h  MinkowskiDistance.cpp  MinkowskiDistance.h  Tools.cpp  Tools.h  run_main.cpp  run_main.h  server.cpp
